# SPDX-FileCopyrightText: 2022 DaniElectra
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "libcipher"
version = "1.1.0"
authors = [
        { name = "DaniElectra", email = "danielectra@outlook.com" }
]
description = "A basic Python library for converting text into different encryption types"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.5"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3",
        "Topic :: Security :: Cryptography"
]

[project.urls]
"Homepage" = "https://github.com/DaniElectra/libcipher"
"Bug Tracker" = "https://github.com/DaniElectra/libcipher/issues"

[tool.setuptools]
packages = ["libcipher"]

